--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -3,6 +3,7 @@
 default: &default
   source_path: app/javascript
   source_entry_path: packs
+  # source_entry_path: packs/application
   public_root_path: public
   public_output_path: packs
   cache_path: tmp/cache/webpacker
@@ -71,10 +72,9 @@ development:
     quiet: false
     pretty: false
     headers:
-      'Access-Control-Allow-Origin': '*'
+      "Access-Control-Allow-Origin": "*"
     watch_options:
-      ignored: '**/node_modules/**'
-
+      ignored: "**/node_modules/**"
 
 test:
   <<: *default
